//
// Licensed to the Apache Software Foundation (ASF) under one
// or more contributor license agreements.  See the NOTICE file
// distributed with this work for additional information
// regarding copyright ownership.  The ASF licenses this file
// to you under the Apache License, Version 2.0 (the
// "License"); you may not use this file except in compliance
// with the License.  You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

option java_package = "io.kyligence.kap.storage.parquet.cube.spark.rpc.generated";

option java_outer_classname = "SparkJobProtos";

option java_generic_services = true;

option java_generate_equals_and_hash = true;

option optimize_for = SPEED;


//either provided a payload to start new request,
//or streaming fetch next part of result by providing fetchNextKey
message SparkJobRequest { 
    optional SparkJobRequestPayload payload = 1;
    optional string streamIdentifier = 2;
}

message SparkJobRequestPayload {
    required bytes gtScanRequest = 1;
    required string kylinProperties = 2;
    required string realizationType = 3;
    required string realizationId = 4;
    required string segmentId = 5;
    required string dataFolderName = 6;
    required int32 maxRecordLength = 7;
    repeated int32 parquetColumns = 8;
    required bool useII = 9;
    required string queryId = 10;
}

message SparkJobResponse {
    repeated ShardBlob shardBlobs = 1;
    required string sparkInstanceIdentifier = 2;
    required string streamIdentifier = 3;

    message ShardBlob {
        required bytes blob = 1;
    }
}

message SparkConfRequest {
    required string name = 1;
}

message SparkConfResponse {
    required string value = 1;
}

service JobService {
    rpc submitJob (stream SparkJobRequest) returns (stream SparkJobResponse);
}

service ConfService {
    rpc getConf (SparkConfRequest) returns (SparkConfResponse);
}
